[package]
name = "hexs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.10"
bevy-inspector-egui = { version = "0.18", optional = true}
