[package]
name = "hexs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
anyhow = "1.0"
bevy = "0.10"
bevy-inspector-egui = { version = "0.18", optional = true}
bevy_prototype_lyon = "0.8"
num-derive = "0.3"
num-integer = "0.1"
num-traits = "0.2"
strum = { version = "0.24", features = ["derive"] }
